# Maicha

./: .editorconfig  .gitignore  Cargo.toml  README.md  Rocket.toml  book.lit  package-lock.json  package.json
src/: main.lit  main.rs
src/view/templates/: base.html.tera  blog.html.tera  index.html.tera  login.html.tera
templates/: base.html.tera
