[package]
name = "maicha"
version = "0.1.0"
authors = ["Jan-Piotraschke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve","tera_templates","diesel_sqlite_pool"]
